# kairo-marketplace-analytics

./: .gitignore  LEARNING_LOG.md  LICENSE  PROJECT_CHARTER.md  README.md  pyproject.toml
analytics/churn_model/: 01_feature_engineering.py  02_train_model.py  03_write_scores.py  churn_analysis_report.md  config.py
analytics/streamlit_app/: app.py  requirements.txt
analytics/streamlit_app/pages/: 1_executive_wbr.py  2_category_performance.py  3_seller_health.py  4_customer_churn_risk.py
dbt_project/: README.md  dbt_project.yml
dbt_project/macros/: clean_numeric.sql
dbt_project/models/bronze/: bronze__customers.sql  bronze__order_items.sql  bronze__orders.sql  (+8 more)
dbt_project/tests/: assert_churn_missing_spend_flag.sql  assert_churn_probability_between_zero_and_one.sql  assert_churn_risk_segment_matches_decile.sql  assert_gmv_is_non_negative.sql  assert_gmv_is_positive.sql  assert_no_orphan_order_items_in_silver.sql  assert_no_zombie_customers_in_silver.sql  assert_orders_after_signup.sql
generator/chaos/: config.py  engine.py  injectors.py
generator/entities/: customer.py  order.py  payment.py  product.py  returns.py  review.py  seller.py  shipment.py
generator/writers/: parquet_writer.py
scripts/: apply_chaos.py  build_dashboard_warehouse.py  business_analysis.py  explore_customers.py  final_reconciliation.py  generate_customers.py  generate_fulfillment.py  generate_orders.py  generate_payments.py  generate_products.py  generate_sellers.py  marketing_channel_analysis.py  profile_bronze.py  reconcile_metrics.py  test_customer_generator.py  verify_metrics.py
(+22 files in other folders)
