[project]
name = "kairo-marketplace-analytics"
version = "0.1.0"
description = "End-to-end BIE synthetic e-commerce data platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.11.12",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.4",
    "faker>=40.28.1",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator"]
